--- a/.coveragerc
+++ b/.coveragerc
@@ -16,13 +16,14 @@
 
 [run]
 branch = True
-
 [report]
 fail_under = 100
 show_missing = True
 omit =
+  google/cloud/__init__.py
   google/cloud/datastore_v1/__init__.py
   google/cloud/datastore_admin_v1/__init__.py
+  */site-packages/*.py
 exclude_lines =
     # Re-enable the standard pragma
     pragma: NO COVER
