feat: OR Query implementation
Introduce new Filter classes:
- PropertyFilter
- And
- Or

Add "property_filter" and "composite_filter" keyword args to "Query.add_filter()"

DeprecationWarning is now emitted when using "add_filter()" without keyword args

--- a/tests/system/index.yaml
+++ b/tests/system/index.yaml
@@ -21,3 +21,13 @@ indexes:
   properties:
   - name: name
   - name: family
+
+- kind: Character
+  properties:
+  - name: alive
+  - name: appearances
+
+- kind: Character
+  properties:
+  - name: Character
+  - name: appearances
