Feat: Parametrize the tests for multidb support
Remove "database" argument from Query and AggregationQuery constructors.
Use the "database" from the client instead.
Once set in the client, the "database" will be used throughout and cannot be re-set.

Parametrize the tests where-ever clients are used.

Use the `system-tests-named-db` in the system test.

--- a/tests/system/index.yaml
+++ b/tests/system/index.yaml
@@ -31,3 +31,17 @@ indexes:
   properties:
   - name: Character
   - name: appearances
+
+- kind: Character
+  ancestor: yes
+  properties:
+    - name: alive
+    - name: family
+    - name: appearances
+
+
+- kind: Character
+  ancestor: yes
+  properties:
+    - name: family
+    - name: appearances
