fixed index formatting issue

--- a/tests/system/index.yaml
+++ b/tests/system/index.yaml
@@ -39,21 +39,21 @@ indexes:
     - name: family
     - name: appearances
 
-
 - kind: Character
   ancestor: yes
   properties:
     - name: family
     - name: appearances
 
- - kind: Character
-   ancestor: yes
-   properties:
-     - name: person
+- kind: Character
+  ancestor: yes
+  properties:
+    - name: person
 
 - kind: Character
   ancestor: yes
   properties:
+    - name: family
     - name: appearances
     - name: person
 
