--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -20,10 +20,16 @@ branchProtectionRules:
     - 'Kokoro system-3.8'
     - 'cla/google'
     - 'OwlBot Post Processor'
-    - 'unittest / cover (pull_request)'
-    - 'docs / docfx (pull_request)'
-    - 'docs / docs (pull_request)'
-    - 'lint / lint (pull_request)'
+    - 'docs'
+    - 'docfx'
+    - 'lint'
+    - 'unit (3.7)'
+    - 'unit (3.8)'
+    - 'unit (3.9)'
+    - 'unit (3.10)'
+    - 'unit (3.11)'
+    - 'cover'
+    - 'mypy'
 # List of explicit permissions to add (additive only)
 permissionRules:
     # Team slug to add to repository permissions
