--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,9 @@ filterwarnings =
     ignore:.*pkg_resources is deprecated as an API:DeprecationWarning
     # Remove once https://github.com/googleapis/python-datastore/issues/504 is fixed
     ignore:Detected filter using positional arguments:UserWarning
+    # Remove once release PR https://github.com/googleapis/proto-plus-python/pull/391 is merged
+    ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning:proto.datetime_helpers
+    # Remove once release PR https://github.com/googleapis/python-api-core/pull/555 is merged
+    ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning:google.api_core.datetime_helpers
+    # Remove once https://github.com/grpc/grpc/issues/35086 is fixed
+    ignore:There is no current event loop:DeprecationWarning:grpc.aio._channel
