--- a/pytest.ini
+++ b/pytest.ini
@@ -15,3 +15,5 @@ filterwarnings =
     ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning:google.api_core.datetime_helpers
     # Remove once https://github.com/grpc/grpc/issues/35086 is fixed
     ignore:There is no current event loop:DeprecationWarning:grpc.aio._channel
+    # Remove once a version of grpcio newer than 1.59.3 is released to PyPI
+    ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning:grpc._channel
