--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,5 @@ filterwarnings =
     ignore:Detected filter using positional arguments:UserWarning
     # Remove once https://github.com/grpc/grpc/issues/35086 is fixed
     ignore:There is no current event loop:DeprecationWarning:grpc.aio._channel
+    # Remove after support for Python 3.7 is dropped
+    ignore:After January 1, 2024, new releases of this library will drop support for Python 3.7:DeprecationWarning
