--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -29,6 +29,7 @@ branchProtectionRules:
     - 'unit (3.10)'
     - 'unit (3.11)'
     - 'unit (3.12)'
+    - 'unit (3.13)'
     - 'cover'
     - 'mypy'
 # List of explicit permissions to add (additive only)
