feat: Update repo settings and samples for Python 3.14

--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -30,6 +30,7 @@ branchProtectionRules:
     - 'unit (3.11)'
     - 'unit (3.12)'
     - 'unit (3.13)'
+    - 'unit (3.14)'
     - 'cover'
     - 'mypy'
 # List of explicit permissions to add (additive only)
