--- a/.kokoro/presubmit/presubmit.cfg
+++ b/.kokoro/presubmit/presubmit.cfg
@@ -5,3 +5,8 @@ env_vars: {
     key: "RUN_SYSTEM_TESTS"
     value: "false"
 }
+
+env_vars: {
+    key: "NOX_SESSION"
+    value: "blacken system-3.12 doctests format"
+}
