updates system test flag to enable system to be run within kokoro

--- a/.kokoro/presubmit/presubmit.cfg
+++ b/.kokoro/presubmit/presubmit.cfg
@@ -3,8 +3,9 @@
 # Disable system tests.
 env_vars: {
     key: "RUN_SYSTEM_TESTS"
-    value: "false"
+    value: "true"
 }
+
 env_vars: {
     key: "NOX_SESSION"
     value: "blacken system-3.12 doctests format"
