ignore gapic errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,3 +5,9 @@ ignore_missing_imports = True
 
 [mypy-google.cloud.datastore._app_engine_key_pb2]
 ignore_errors = True
+
+[mypy-google.cloud.datastore_admin_v1.services.*]
+ignore_errors = True
+
+[mypy-google.cloud.datastore_v1.services.*]
+ignore_errors = True
