--- a/.kokoro/presubmit/presubmit.cfg
+++ b/.kokoro/presubmit/presubmit.cfg
@@ -3,10 +3,10 @@
 # Disable system tests.
 env_vars: {
     key: "RUN_SYSTEM_TESTS"
-    value: "true"
+    value: "false"
 }
 
 env_vars: {
     key: "NOX_SESSION"
-    value: "blacken system-3.12 doctests format"
+    value: "blacken doctests format"
 }
